--- a/src/app/modules/schooltimetable/teacheroffperiod/teacheroffperiod.component.scss
+++ b/src/app/modules/schooltimetable/teacheroffperiod/teacheroffperiod.component.scss
@@ -6,6 +6,9 @@ mat-cell,mat-header-cell{
     padding: 15px;
     border-right: 1px solid lightgray;
 }
+.mat-column-Day{
+    width:60px;
+}
 // @media print {
 //     font-size: 133%;
 //   }
