--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -34,8 +34,9 @@
                 </mat-menu>
             </div>
         </div>
-       
+        
         <div style="background-color:green;height:5px;width:100%"> </div>
+        <div style="background-color:#cddc39;height:1px;width:100%"> </div>
         <!-- <div style="background-color:#cddc39;height:11px;width:100%"> </div> -->
     </mat-toolbar-row>
     <mat-toolbar-row fxShow.gt-xs fxHide.gt-xs
