--- a/src/app/modules/attendance/absentlist/absentlist.component.html
+++ b/src/app/modules/attendance/absentlist/absentlist.component.html
@@ -19,7 +19,7 @@
     <mat-form-field appearance="outline" [style.width.px]="150">
         <mat-label>Subject</mat-label>
         <mat-select formControlName="searchClassSubjectId">
-            <mat-option>--select--</mat-option>
+            <mat-option value="0">--select--</mat-option>
             <mat-option *ngFor="let item of FilteredClassSubjects" [value]="item.ClassSubjectId">{{item.ClassSubject}}
             </mat-option>
         </mat-select>
@@ -88,7 +88,7 @@
                 <mat-form-field appearance="outline">
                     <mat-label>reported to</mat-label>
                     <mat-select [(ngModel)]="element.ReportedTo" [value]="element.ReportedTo">
-                        <mat-option>--select--</mat-option>
+                        <mat-option value="0">--select--</mat-option>
                         <mat-option *ngFor="let item of Teachers" [value]="item.TeacherId">{{item.TeacherName}}
                         </mat-option>
                     </mat-select>
