--- a/src/app/modules/schoolreports/feecollectionreport/feecollectionreport.component.html
+++ b/src/app/modules/schoolreports/feecollectionreport/feecollectionreport.component.html
@@ -28,7 +28,7 @@
         <mat-form-field appearance="outline">
             <mat-label>Class</mat-label>
             <mat-select formControlName="searchClassId">
-                <mat-option>select</mat-option>
+                <mat-option value="0">select</mat-option>
                 <mat-option *ngFor="let item of Classes" [value]="item.ClassId">
                     {{item.ClassName}}
                 </mat-option>
